--- a/Project/pages/catering.html
+++ b/Project/pages/catering.html
@@ -56,7 +56,7 @@
     
     <main>
         <section class="catering">
-            <br><h1>Order Form</h1>
+            <h1>Order Form</h1>
             <form action="/action_page.php" method="post"
                 <label for="first">First Name</label>
                 <input type="text" name="first" id="first">
