--- a/Project/pages/index.html
+++ b/Project/pages/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="../js/myscript.js"></script>
+
     <title>Tisdale's Southern BBQ Homepage</title>
 </head>
 
@@ -99,6 +101,16 @@
                     <input type="submit" value="Send">
                 </form>
             </div>
+
+            <div id="popupCTA" class="popup">
+                <div class="popup-content">
+                    <span class="close-btn" onclick="closePopup()">&times;</span>
+                    <h2>Order Online Today!</h2>
+                    <p>Get your favorite BBQ delivered to your doorstep.</p>
+                    <a href="menu.html" class="order-btn">Order Now</a>
+                </div>
+            </div>
+
         </section>
     </main>
 
