--- a/catering.html
+++ b/catering.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Southern BBQ, food truck, BBQ catering, Fayetteville NC, Myrtle Beach SC, pulled pork, smoked brisket, ribs">
     <meta name="author" content="Dantwain Shackleford Jr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Catering - Tisdale's Southern BBQ</title>
 </head>
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../css/tsbq-logo.jpg" alt="Tisdale's Southern BBQ Logo" width="250">
+            <img src="tsbq-logo.jpg" alt="Tisdale's Southern BBQ Logo" width="250">
         </div>
         <div class="name">
             <h1>Tisdale's <br>Southern<br> BBQ</h1>
@@ -56,7 +56,7 @@
     
     <main>
         <section class="catering">
-            <br><h1>Order Form</h1>
+            <h1>Order Form</h1>
             <form action="/action_page.php" method="post"
                 <label for="first">First Name</label>
                 <input type="text" name="first" id="first">
