--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Southern BBQ, food truck, BBQ catering, Fayetteville NC, Myrtle Beach SC, pulled pork, smoked brisket, ribs">
     <meta name="author" content="Dantwain Shackleford Jr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Menu - Tisdale's Southern BBQ</title>
 </head>
@@ -25,7 +25,7 @@
 <body>
     <<header>
         <div class="logo">
-            <img src="../css/tsbq-logo.jpg" alt="Tisdale's Southern BBQ Logo" width="250">
+            <img src="tsbq-logo.jpg" alt="Tisdale's Southern BBQ Logo" width="250">
         </div>
         <div class="name">
             <h1>Tisdale's <br>Southern<br> BBQ</h1>
@@ -54,7 +54,7 @@
             <h2><i>Treat Yourself To Our Mouth Watering Tongue Twisting BBQ</i></h2>
 
             <br>
-            <div class="menu-dinner">
+            <div class="menu-food">
                 <h2>Dinners</h2>
                 <h3>*2 Sides + Roll*</h3><br>
                 <p>BBQ Pork Rib Plate - $14.69</p>
@@ -64,7 +64,7 @@
                 <p>BBQ Pull Pork (1/2 lb) - $15.00</p>
             </div>
             <br>
-            <div class="menu-sandwiches">
+            <div class="menu-food">
                 <h2>Sandwiches</h2>
                 <h3>*Hotdog / Sausage Dog - Ketchup, Musturd, Onion, Slaw, Relish, Chilli*</h3>
                 <h3>*Cheeseburger - Lettece, Tomato, Onion, Pickle, Ketchup, Musturd, Mayo*</h3><br>
@@ -78,7 +78,7 @@
                 <p>Pull Pork Sliders (2) - $6.00</p>
             </div>
             <br>
-            <div class="menu-sides">
+            <div class="menu-food">
                 <h2> Homemade Sides</h2>
                 <p>Potato Salad (8 oz.) - $4.50</p>
                 <p>Mac & Cheese (8 oz.) - $4.80</p>
@@ -90,7 +90,7 @@
                 <p>Chilli Cheese Fries - $9.00</p>
             </div>
             <br>
-            <div class="menu-meats">
+            <div class="menu-food">
                 <h2>Meat Only</h2>
                 <p>Slab BBQ Spare Ribs - $30.00 | 1/2 Slab - $16.00</p>
                 <p>Small Turkey Leg - $8.00 | Large - $15.00</p>
@@ -98,19 +98,19 @@
                 <p>BBQ Pull Pork 1/2 lb. - $9.00 | 1 lb. $17.00</p>
             </div>
             <br>
-            <div class="menu-fam">
+            <div class="menu-food">
                 <h2>Tisdale's Big Family Dinner</h2>
                 <h3>*Includes 4 - 8 oz. Homemade Sides, 4 Drinks, 4 Dinner Rolls*</h3><br>
                 <p>lb. Bristket, lb. Pull Pork, 1/2 Slab Rib - $79.99</p>
             </div>
             <br>
-            <div class="menu-sweets">
+            <div class="menu-food">
                 <h2>Homemade Deserts</h2>
                 <h3><i>Seasonal options may not be Available</i></h3><br>
                 <p>Honey Bun Cake - $2.75 / slice | Whole Cake - $30.00</p>
             </div>
             <br>
-            <div class="menu-drinks">
+            <div class="menu-food">
                 <h2>Drinks</h2>
                 <p>Bottled Soda : Coke/Diet Coke, Pepsi, Fanta, Mtn Dew, Sprite, Ginger Ale, Brisk Tea, Lemonade - $1.50</p>
                 <p>Bottled Water - $1.50</p>
