--- a/menu.html
+++ b/menu.html
@@ -53,8 +53,17 @@
             <h1>Our Menu</h1>
             <h2><i>Treat Yourself To Our Mouth Watering Tongue Twisting BBQ</i></h2>
 
+            <div class="tabs">
+                <button class="tab-link active" data-tab="dinners">Dinners</button>
+                <button class="tab-link" data-tab="sandwiches">Sandwiches</button>
+                <button class="tab-link" data-tab="sides">Sides</button>
+                <button class="tab-link" data-tab="meat-only">Meat Only</button>
+                <button class="tab-link" data-tab="family-dinner">Family Dinner</button>
+                <button class="tab-link" data-tab="desserts">Desserts</button>
+                <button class="tab-link" data-tab="drinks">Drinks</button>
+
             <br>
-            <div class="menu-food">
+            <div id="dinners" class="tab-content active">
                 <h2>Dinners</h2>
                 <h3>*2 Sides + Roll*</h3><br>
                 <p>BBQ Pork Rib Plate - $14.69</p>
@@ -64,7 +73,7 @@
                 <p>BBQ Pull Pork (1/2 lb) - $15.00</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="sandwiches" class="tab-content">
                 <h2>Sandwiches</h2>
                 <h3>*Hotdog / Sausage Dog - Ketchup, Musturd, Onion, Slaw, Relish, Chilli*</h3>
                 <h3>*Cheeseburger - Lettece, Tomato, Onion, Pickle, Ketchup, Musturd, Mayo*</h3><br>
@@ -78,7 +87,7 @@
                 <p>Pull Pork Sliders (2) - $6.00</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="Sides" class="tab-content">
                 <h2> Homemade Sides</h2>
                 <p>Potato Salad (8 oz.) - $4.50</p>
                 <p>Mac & Cheese (8 oz.) - $4.80</p>
@@ -90,7 +99,7 @@
                 <p>Chilli Cheese Fries - $9.00</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="Meats" class="tab-content">
                 <h2>Meat Only</h2>
                 <p>Slab BBQ Spare Ribs - $30.00 | 1/2 Slab - $16.00</p>
                 <p>Small Turkey Leg - $8.00 | Large - $15.00</p>
@@ -98,19 +107,19 @@
                 <p>BBQ Pull Pork 1/2 lb. - $9.00 | 1 lb. $17.00</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="Family Dinner" class="tab-content"></div>
                 <h2>Tisdale's Big Family Dinner</h2>
                 <h3>*Includes 4 - 8 oz. Homemade Sides, 4 Drinks, 4 Dinner Rolls*</h3><br>
                 <p>lb. Bristket, lb. Pull Pork, 1/2 Slab Rib - $79.99</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="desserts" class="tab-content">
                 <h2>Homemade Deserts</h2>
                 <h3><i>Seasonal options may not be Available</i></h3><br>
                 <p>Honey Bun Cake - $2.75 / slice | Whole Cake - $30.00</p>
             </div>
             <br>
-            <div class="menu-food">
+            <div id="drinks" class="tab-content">
                 <h2>Drinks</h2>
                 <p>Bottled Soda : Coke/Diet Coke, Pepsi, Fanta, Mtn Dew, Sprite, Ginger Ale, Brisk Tea, Lemonade - $1.50</p>
                 <p>Bottled Water - $1.50</p>
