--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="welcome">
                 <h1>Welcome to Tisdale's Southern BBQ</h1>
                 <p>Experience authentic Southern BBQ cooked low and slow out of passion.</p>
-                <h2>Need Catering? <a href="catering.html">Schedule an Order Today!</a></h2>
+                <h2 class="animation">Need Catering? <a href="catering.html">Schedule an Order Today!</a></h2>
             </div>
 
             <div class="special">
