--- a/menu.html
+++ b/menu.html
@@ -54,16 +54,17 @@
             <h2><i>Treat Yourself To Our Mouth Watering Tongue Twisting BBQ</i></h2>
 
             <div class="tabs">
-                <button class="tab-link active" data-tab="dinners">Dinners</button>
-                <button class="tab-link" data-tab="sandwiches">Sandwiches</button>
-                <button class="tab-link" data-tab="sides">Sides</button>
-                <button class="tab-link" data-tab="meat-only">Meat Only</button>
-                <button class="tab-link" data-tab="family-dinner">Family Dinner</button>
-                <button class="tab-link" data-tab="desserts">Desserts</button>
-                <button class="tab-link" data-tab="drinks">Drinks</button>
+                <button class="tab-button" onclick="openTab('Dinners')">Dinners</button>
+                <button class="tab-button" onclick="openTab('Sandwiches')">Sandwiches</button>
+                <button class="tab-button" onclick="openTab('Sides')">Sides</button>
+                <button class="tab-button" onclick="openTab('MeatOnly')">Meat Only</button>
+                <button class="tab-button" onclick="openTab('FamilyDinner')">Family Dinner</button>
+                <button class="tab-button" onclick="openTab('Desserts')">Desserts</button>
+                <button class="tab-button" onclick="openTab('Drinks')">Drinks</button>
+            </div>
 
             <br>
-            <div id="dinners" class="tab-content active">
+            <div id="Dinners" class="tab-content">
                 <h2>Dinners</h2>
                 <h3>*2 Sides + Roll*</h3><br>
                 <p>BBQ Pork Rib Plate - $14.69</p>
@@ -73,7 +74,7 @@
                 <p>BBQ Pull Pork (1/2 lb) - $15.00</p>
             </div>
             <br>
-            <div id="sandwiches" class="tab-content">
+            <div id="Sandwiches" class="tab-content">
                 <h2>Sandwiches</h2>
                 <h3>*Hotdog / Sausage Dog - Ketchup, Musturd, Onion, Slaw, Relish, Chilli*</h3>
                 <h3>*Cheeseburger - Lettece, Tomato, Onion, Pickle, Ketchup, Musturd, Mayo*</h3><br>
@@ -113,13 +114,13 @@
                 <p>lb. Bristket, lb. Pull Pork, 1/2 Slab Rib - $79.99</p>
             </div>
             <br>
-            <div id="desserts" class="tab-content">
+            <div id="Desserts" class="tab-content">
                 <h2>Homemade Deserts</h2>
                 <h3><i>Seasonal options may not be Available</i></h3><br>
                 <p>Honey Bun Cake - $2.75 / slice | Whole Cake - $30.00</p>
             </div>
             <br>
-            <div id="drinks" class="tab-content">
+            <div id="Drinks" class="tab-content">
                 <h2>Drinks</h2>
                 <p>Bottled Soda : Coke/Diet Coke, Pepsi, Fanta, Mtn Dew, Sprite, Ginger Ale, Brisk Tea, Lemonade - $1.50</p>
                 <p>Bottled Water - $1.50</p>
