--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="catering.html">Catering</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Order Online</a></li>
+                <li><a href="index.html">Gallery</a></li>
+                <li><a href="menu.html">Order Online</a></li>
             </ul>
         </nav>
         <div class="social-media">
@@ -68,7 +68,7 @@
                 <img src="cake.jpg"alt="image of pound cake" width="250">
                 <p>Pound Cake - $2.50 / slice</p>
             </div>
-
+            <br>
             <div class="about">
                 <br><h2>About Us</h2>
                 <h3>Who are We?</h3>
@@ -91,7 +91,7 @@
 
             <div class="contact">
                 <h2>Get In Contact With Us</h2>
-                <p>Our Business Number: +1 910.709.2900</p>
+                <p>Our Business Number: +1 910.709.2900</p><br>
                 <h3>For any inquires, please leave your details below:</h3><br>
                 <form action="" method="POST">
                     <input type="text" name="name" id="name" placeholder="Full Name">
